@@ -454,6 +454,9 @@ Library
 - Bug #792570: SimpleXMLRPCServer had problems if the request grew too large.
   Fixed by reading the HTTP body in chunks instead of one big socket.read().
 
+- Patch #893642: add allow_none argument to constructors of 
+  SimpleXMLRPCServer and CGIXMLRPCRequestHandler.
+
 - Bug #1110478: Revert os.environ.update to do putenv again.
 
 - Bug #1103844: fix distutils.install.dump_dirs() with negated options.
